--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
       <a href="pagina1.html"> Caminho relativo 1 </a></br>
       <a href="outros/pagina2.html"> Caminho relativo 2 </a></br>
       <a href="http://portal.utfpr.edu.br/" target="_blank"> Caminho absoluto </a></br>
+      <a href="outros/" target="_blank"> Física I </a></br>
+      <a href="outros/" target="_blank"> Química I </a></br>
+      <a href="outros/" target="_blank"> Cálculo I </a></br>
+      <a href="outros/" target="_blank"> Ciências do Meio Ambiente </a></br>
+
     </aside>
     <footer id="rodape">
       <p>Prof. ME. Elenilton Dezengrini</p>
