--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
       <a href="pagina1.html"> Caminho relativo 1 </a></br>
       <a href="outros/pagina2.html"> Caminho relativo 2 </a></br>
       <a href="http://portal.utfpr.edu.br/" target="_blank"> Caminho absoluto </a></br>
-      <a href="outros/" target="_blank"> Física I </a></br>
-      <a href="outros/" target="_blank"> Química I </a></br>
-      <a href="outros/" target="_blank"> Cálculo I </a></br>
-      <a href="outros/" target="_blank"> Ciências do Meio Ambiente </a></br>
+      <a href="outros/calculo1.html" target="_blank"> Cálculo I </a></br>
+      <a href="outros/ciencias1" target="_blank"> Ciências do Meio Ambiente </a></br>
+      <a href="outros/fisica1" target="_blank"> Física I </a></br>
+      <a href="outros/quimica1" target="_blank"> Química I </a></br>
   </aside>
     <footer id="rodape">
-      <p>Prof. ME. Elenilton Dezengrini</p>
+      <p> Artur de Oliveira Rodrigues</p>
     </footer>
   </div>
 </body>
