--- a/outros/fisica1.html
+++ b/outros/fisica1.html
@@ -56,9 +56,10 @@
       </article>
     </section>
     <aside id="lateral">
-      <a href="pagina1.html"> Caminho relativo 1 </a></br>
-      <a href="outros/pagina2.html"> Caminho relativo 2 </a></br>
-      <a href="http://portal.utfpr.edu.br/" target="_blank"> Caminho absoluto </a></br>
+      <a href="outros/Exerc1ºanoMovimento Uniforme - MU (1).pdf" target="_blank">Meu documento em pdf</a/br>
+      <a href="outros/aula 01 de física 1.pdfp"> Meu documento em pdf </a></br>
+      <a href="outros/queda livre e lançamento na vertical.pdf" target="_blank"> meu documento em pdf </a></br>
+      <a href="outros/MRUV.pdf" target="_blank"> meu documento em pdf </a></br>
     </aside>
     <footer id="rodape">
       <p>Prof. ME. Elenilton Dezengrini</p>
