--- a/outros/fisica1.html
+++ b/outros/fisica1.html
@@ -56,13 +56,13 @@
       </article>
     </section>
     <aside id="lateral">
-      <a href="outros/Exerc1ºanoMovimento Uniforme - MU (1).pdf" target="_blank">Meu documento em pdf</a/br>
-      <a href="outros/aula 01 de física 1.pdfp"> Meu documento em pdf </a></br>
-      <a href="outros/queda livre e lançamento na vertical.pdf" target="_blank"> meu documento em pdf </a></br>
-      <a href="outros/MRUV.pdf" target="_blank"> meu documento em pdf </a></br>
+      <a href="Exerc1ºanoMovimento Uniforme - MU (1).pdf" target="_blank">mu</a/br>
+      <a href="aula 01 de física 1.pdfp"> aula 01 </a></br>
+      <a href="queda livre e lançamento na vertical.pdf" target="_blank"> queda livre e lançamento vertical </a></br>
+      <a href="MRUV.pdf" target="_blank"> mruv </a></br>
     </aside>
     <footer id="rodape">
-      <p>Prof. ME. Elenilton Dezengrini</p>
+      <p>Artur de Oliveira Rodrigues</p>
     </footer>
   </div>
 </body>
