--- a/outros/ciencias1.html
+++ b/outros/ciencias1.html
@@ -56,12 +56,12 @@
       </article>
     </section>
     <aside id="lateral">
-      <a href="pagina1.html"> Caminho relativo 1 </a></br>
-      <a href="outros/pagina2.html"> Caminho relativo 2 </a></br>
-      <a href="http://portal.utfpr.edu.br/" target="_blank"> Caminho absoluto </a></br>
+      <a href="">  </a></br>
+      <a href="">  </a></br>
+      <a href="" target="_blank"> </a></br>
     </aside>
     <footer id="rodape">
-      <p>Prof. ME. Elenilton Dezengrini</p>
+      <p>Artur de Oliveira Rodrigues</p>
     </footer>
   </div>
 </body>
