--- a/outros/fisica1.html
+++ b/outros/fisica1.html
@@ -56,7 +56,7 @@
       </article>
     </section>
     <aside id="lateral">
-      <a href="Exerc1ºanoMovimento Uniforme - MU (1).pdf" target="_blank">mu</a/br>
+      <a href="Exerc1ºanoMovimento Uniforme - MU (1).pdf" target="_blank">mu</a></br>
       <a href="aula 01 de física 1.pdfp"> aula 01 </a></br>
       <a href="queda livre e lançamento na vertical.pdf" target="_blank"> queda livre e lançamento vertical </a></br>
       <a href="MRUV.pdf" target="_blank"> mruv </a></br>
